# galley

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-backend.yml  ci-frontend.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_soft_delete.py  003_add_ebook_download_filename.py  004_add_genres.py  005_add_ebook_pricing.py  006_add_tags.py  007_add_ebook_visibility.py  008_add_cover_image_key_to_manuscripts.py  009_add_author_public_profile_fields_store_.py
docs/: architecture.md  backend_design.md  logging-roadmap.md  product_spec.md  publishing_states.md  todo.md  user_stories.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  client.ts  ebooks.ts  genres.ts  manuscripts.ts  store.ts  tags.ts
frontend/src/components/: Layout.tsx  Navbar.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.tsx  useEbooks.ts  useGenres.ts  useInactivityTimer.ts  useManuscripts.ts  useTags.ts
frontend/src/pages/: Dashboard.tsx  Ebooks.tsx  Genres.tsx  Login.tsx  ManuscriptDetail.tsx  ManuscriptForm.tsx  Profile.tsx  Register.tsx  StoreAuthorDetail.tsx  StoreBrowse.tsx  StoreEditionDetail.tsx  StoreManuscriptDetail.tsx  Tags.tsx
frontend/src/types/: index.ts
src/app/: config.py  dependencies.py  main.py
src/app/api/: __init__.py  auth.py  authors.py  debug.py  documents.py  ebooks.py  errors.py  genres.py  health.py  manuscripts.py  samples.py  store.py  tags.py
src/app/db/: __init__.py  base.py  models.py
src/app/domain/: __init__.py  author.py  document.py  download.py  ebook.py  enums.py  exceptions.py  genre.py  manuscript.py  sample.py  tag.py
tests/: conftest.py  test_api_auth.py  test_api_authors.py  test_api_ebooks.py  test_api_genres.py  test_api_manuscripts.py  test_api_samples.py  test_api_store.py  test_api_tags.py  test_auth.py  test_conversion_service.py  test_domain.py  test_services.py  test_storage.py  test_store.py
tests/resources/: AndrewZimmern_MasoorDal.odt  Quick Start Guide - John Schember.epub  make_odt.py  make_unstyled_odt.py  unstyled_odt.odt  valid_odt.odt
(+41 files in other folders)
