[project]
name = "self-publishing"
version = "0.1.0"
description = "Publish documents yourself"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Your Name", email = "you@example.com" }
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings",
  "python-multipart>=0.0.9",
  "typing-extensions>=4.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "httpx>=0.26",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true
