[project]
name = "galley"
version = "0.1.0"
description = "Ebook store and sample distribution platform for self-published authors"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }

authors = [
  { name = "Zach Dinkmeyer", email = "zach.dinkmeyer@gmail.com" }
]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings",
  "python-multipart>=0.0.9",
  "python-slugify",
  "typing-extensions>=4.10",
  # Database
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "asyncpg>=0.29",
  # Auth
  "pyjwt>=2.8",
  "bcrypt>=4.1",
  # File handling
  "aiofiles>=23.2",
  # Email validation
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "pytest-asyncio>=0.23",
  "httpx>=0.26",
  "ruff>=0.3",
  "mypy>=1.8",
  "types-aiofiles>=23.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -n auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "B904", "B008", "UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_any_generics = true
no_implicit_optional = true

[dependency-groups]
dev = [
    "pytest-xdist>=3.8.0",
]
